action 2 : remplacement image-textes en textes

--- a/index.html
+++ b/index.html
@@ -66,9 +66,7 @@
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
 				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Agence La Panthère, agence web paris, création logo paris" />
-				<h1 class="text-center hero-bloc-text tc-white ">
-					Agence La Panthère
-				</h1>
+				<h1 class="text-center hero-bloc-text tc-white">Agence La Panthère</h1>
 				<div class="text-center">
 					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 				</div>
@@ -83,7 +81,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+				<p class="explanation">L'agence La Panthère est une agence de web design qui aide <br>les entreprises à devenir attractives et visibles sur Internet.</p>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -123,8 +121,12 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
-
+				<div class="citation">
+					<p class="citation-content">"L'Agence La Panthère est une excellente agence web ! 
+						Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. 
+						Cela nous a aidé à doubler nos ventes en ligne à Lyon."</p>
+					<p class="citation-source">Maxime Guibard, PDG de À vos fourchettes</p>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -153,7 +155,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+				<p class="explanation">Nous travaillons avec beaucoup de clients, voici quelques <br>exemples de design que nous avons réalisé pour eux :</p>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
@@ -204,11 +206,13 @@
 <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 	<div class="container bloc-lg">
 		<div class="row">
-			<h2 class="mg-md text-center tc-white">
-				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
-			</h2>
-			<div class="col-sm-12 text-center">
-				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+			<div class="col-sm-12">
+				<h2 class="mg-md text-center tc-white">
+					Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
+				</h2>
+				<div class="col-sm-12 text-center">
+					<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+				</div>
 			</div>
 		</div>
 	</div>
