action 5 : réparer q3 du formulaire

--- a/page2.html
+++ b/page2.html
@@ -76,7 +76,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+				<form id="form_1" novalidate data-success-msg="Formulaire envoyé !" data-fail-msg="Désolé, il semblerai que notre serveur mail ne réponde pas.">
 					<div class="form-group">
 						<label>
 							Nom
@@ -93,7 +93,7 @@
 						<label>
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" type="email" required id="input_504" />
+						<input class="form-control" id="input_504" required/>
 					</div>
 					<div class="form-group">
 						<label>
