--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 		<meta charset="utf-8">
 		<title>La Panthère - webdesign pour entreprise Lyonnaise</title>
 		<meta name="description" content="Besoin d'une vitrine en ligne pour votre activité sur Lyon ? On se charge du design et de l'optimisation !">
-		<meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 		
@@ -31,9 +30,7 @@
 
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 							<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40" /></a>
-							<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 								<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 							</button>
@@ -46,7 +43,7 @@
 								<li>
 								</li>
 								<li>
-									<a href="page2.html">page2 &gt;</a>
+									<a href="page2.html">Contact</a>
 								</li>
 							</ul>
 						</div>
@@ -62,9 +59,6 @@
 						<div class="col-sm-12">
 							<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Agence La Panthère, agence web paris, création logo paris" />
 							<h1 class="text-center hero-bloc-text tc-white">Agence La Panthère</h1>
-							<div class="text-center">
-								<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
-							</div>
 						</div>
 					</div>
 				</div>
@@ -76,7 +70,7 @@
 				<div class="container bloc-md">
 					<div class="row">
 						<div class="col-sm-12 text-center">
-							<p class="explanation">L'agence La Panthère est une agence de web design qui aide <br>les entreprises à devenir attractives et visibles sur Internet.</p>
+							<p class="explanation">Nous sommes une agence de web design qui aide <br>les entreprises situé sur Lyon à devenir attractives et visibles sur Internet.</p>
 						</div>
 					</div>
 					<div class="row voffset-lg med-width-whitespace">
@@ -88,7 +82,7 @@
 								Web design
 							</h3>
 							<p class="text-center ">
-								Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+								Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 							</p>
 						</div>
 						<div class="col-sm-4">
@@ -96,10 +90,10 @@
 								<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 							</div>
 							<h3 class="mg-md text-center">
-								&nbsp;Stratégie
+								Stratégie
 							</h3>
 							<p class="text-center ">
-								Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
+								Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin d'améliorer aux mieux votre design et votre référencement naturel.
 							</p>
 						</div>
 						<div class="col-sm-4">
@@ -134,11 +128,14 @@
 					<div class="row tight-width-whitespace black-background">
 						<div class="col-sm-12">
 							<h2 class="mg-md text-center tc-white">
-								Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
+								Notre travail ? Aider les entreprises Lyonnaise à se développer, à attirer de nouveaux clients et à connaître le succès qu'elles mérites.<br>
 							</h2>
 							<p class="text-center white">
-								Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
+								Collaborer avec des entrepreneurs créatifs et des entreprises locale est notre passion, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau, bien structurés et qui seront facilement trouvable sur les moteurs de recherche.
 							</p>
+							<div class="col-sm-12 text-center">
+								<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Nous Contacter</a>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -155,18 +152,18 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
+							<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="Exemple de design pour le site d'un journal local avec lequel nous avons travaillé." class="img-responsive portfolio-thumb" /></a>
 							<h3 class="mg-md text-center">
-								Refonte d'un site web pour un journal local
+								Refonte d'un site pour un journal local
 							</h3>
 							<p class="text-center">
 								Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+							<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" alt="Exemple de design pour un site de photographes avec lesquels nous avons travaillé." class="img-responsive portfolio-thumb" /></a>
 							<h3 class="mg-md text-center">
-								Création d'un site web pour photographes
+								Création d'un site pour photographes
 							</h3>
 							<p class="text-center">
 								Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
@@ -175,16 +172,16 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
+							<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" alt="Exemple de design pour le site d'un' voyageur avec lequel nous avons travaillé." class="img-responsive portfolio-thumb" /></a>
 							<h3 class="mg-md text-center">
-								Création d'un site internet pour un voyageur
+								Réalisation d'un site pour un voyageur
 							</h3>
 							<p class="text-center">
-								Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
+								Nous avons élaboré un site web et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+							<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" alt="Exemple de design pour le site d'une agence de mariage avec laquelle nous avons travaillé." class="img-responsive portfolio-thumb" /></a>
 							<h3 class="mg-md text-center">
 								Conception d'un site pour une agence de mariage
 							</h3>
@@ -206,7 +203,7 @@
 								Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 							</h2>
 							<div class="col-sm-12 text-center">
-								<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+								<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Nous Contacter</a>
 							</div>
 						</div>
 					</div>
@@ -220,7 +217,7 @@
 					<div class="row">
 						<div class="col-sm-12">
 							<p class="text-center white">
-								Agence La Panthère - Agence web basée à Lyon.<br>
+								Agence La Panthère - Agence de webdesign basée à Lyon.
 							</p>
 							<div class="row row-no-gutters social">
 								<div class="col-sm-3">
@@ -243,7 +240,6 @@
 										<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 									</div>
 								</div>
-								<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 							</div>
 							<div class="row footer-links">
 								<div class="col-sm-4">
