--- a/page2.html
+++ b/page2.html
@@ -4,7 +4,6 @@
 		<meta charset="utf-8">
 		<title>Nous contacter - La Panthère</title>
 		<meta name="description" content="Besoin d'une vitrine en ligne pour votre activité sur Lyon ? On se charge du design et de l'optimisation !">
-		<meta name="keywords" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 		
@@ -43,7 +42,7 @@
 								<li>
 								</li>
 								<li>
-									<a href="page2.html">page2 &gt;</a>
+									<a href="page2.html">Contact</a>
 								</li>
 							</ul>
 						</div>
@@ -62,7 +61,7 @@
 							</h1>
 							<p class="text-center mg-lg tc-white tight-width-whitespace">
 								Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
-								Parlez-nous de votre projet en complétant le formulaire ci-dessous.
+								Parlez-nous de votre projet en complétant le formulaire ci-dessous :
 							</p>
 						</div>
 					</div>
