--- a/page2.html
+++ b/page2.html
@@ -54,7 +54,8 @@
 			<!-- bloc-6 -->
 			<div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
 				<div class="container bloc-lg">
-					<div class="row">
+					<div class="row tight-width-whitespace black-background">
+						
 						<div class="col-sm-12">
 							<h1 class="text-center hero-bloc-text tc-white">
 								Parlons web design !
