--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
 			<!-- bloc-0 -->
 			<div class="bloc bgc-white l-bloc " id="bloc-0">
 				<div class="container bloc-sm">
-
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40" /></a>
-							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+							<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="Bannière de l'Agence La Panthère" height="40" /></a>
+							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1" aria-labelledby="Boutons de navigations">
 								<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 							</button>
 						</div>
@@ -39,8 +38,6 @@
 							<ul class="site-navigation nav navbar-nav">
 								<li>
 									<a href="index.html">Accueil</a>
-								</li>
-								<li>
 								</li>
 								<li>
 									<a href="page2.html">Contact</a>
@@ -57,7 +54,7 @@
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace">
 						<div class="col-sm-12">
-							<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Agence La Panthère, agence web paris, création logo paris" />
+							<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo de l'Agence La Panthère" />
 							<h1 class="text-center hero-bloc-text tc-white">Agence La Panthère</h1>
 						</div>
 					</div>
@@ -76,34 +73,34 @@
 					<div class="row voffset-lg med-width-whitespace">
 						<div class="col-sm-4">
 							<div class="text-center">
-								<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+								<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg" aria-labelledby="Icône du point Web Design"></span>
 							</div>
 							<h3 class="mg-md text-center">
 								Web design
 							</h3>
-							<p class="text-center ">
+							<p class="text-center">
 								Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 							</p>
 						</div>
 						<div class="col-sm-4">
 							<div class="text-center">
-								<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+								<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg" aria-labelledby="Icône du point Stratégie"></span>
 							</div>
 							<h3 class="mg-md text-center">
 								Stratégie
 							</h3>
-							<p class="text-center ">
+							<p class="text-center">
 								Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin d'améliorer aux mieux votre design et votre référencement naturel.
 							</p>
 						</div>
 						<div class="col-sm-4">
 							<div class="text-center">
-								<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+								<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" aria-labelledby="Icône du point Illustrations"></span>
 							</div>
 							<h3 class="mg-md text-center">
 								Illustrations
 							</h3>
-							<p class="text-center ">
+							<p class="text-center">
 								Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
 							</p>
 						</div>
@@ -152,7 +149,7 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="Exemple de design pour le site d'un journal local avec lequel nous avons travaillé." class="img-responsive portfolio-thumb" /></a>
+							<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="Exemple de design pour le site d'un journal local avec lequel nous avons travaillé" class="img-responsive portfolio-thumb" /></a>
 							<h3 class="mg-md text-center">
 								Refonte d'un site pour un journal local
 							</h3>
@@ -161,7 +158,7 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" alt="Exemple de design pour un site de photographes avec lesquels nous avons travaillé." class="img-responsive portfolio-thumb" /></a>
+							<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" alt="Exemple de design pour un site de photographes avec lesquels nous avons travaillé" class="img-responsive portfolio-thumb" /></a>
 							<h3 class="mg-md text-center">
 								Création d'un site pour photographes
 							</h3>
@@ -172,7 +169,7 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" alt="Exemple de design pour le site d'un' voyageur avec lequel nous avons travaillé." class="img-responsive portfolio-thumb" /></a>
+							<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" alt="Exemple de design pour le site d'un' voyageur avec lequel nous avons travaillé" class="img-responsive portfolio-thumb" /></a>
 							<h3 class="mg-md text-center">
 								Réalisation d'un site pour un voyageur
 							</h3>
@@ -181,7 +178,7 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" alt="Exemple de design pour le site d'une agence de mariage avec laquelle nous avons travaillé." class="img-responsive portfolio-thumb" /></a>
+							<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" alt="Exemple de design pour le site d'une agence de mariage avec laquelle nous avons travaillé" class="img-responsive portfolio-thumb" /></a>
 							<h3 class="mg-md text-center">
 								Conception d'un site pour une agence de mariage
 							</h3>
@@ -222,22 +219,22 @@
 							<div class="row row-no-gutters social">
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+										<a class="social" href="index.html"><span class="fa fa-twitter icon-md" title="Notre compte Twitter"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+										<a class="social" href="index.html"><span class="fa fa-facebook icon-md" title="Notre compte Facebook"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+										<a class="social" href="index.html"><span class="fa fa-dribbble icon-md" title="Notre compte Dribble"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+										<a class="social" href="index.html"><span class="fa fa-instagram icon-md" title="Notre compte Instagram"></span></a>
 									</div>
 								</div>
 							</div>
