--- a/page2.html
+++ b/page2.html
@@ -29,8 +29,8 @@
 				<div class="container bloc-sm">
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="atlanta web design logo" height="40" /></a>
-							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+							<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="Bannière de l'Agence La Panthère" height="40" /></a>
+							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1" aria-labelledby="Boutons de navigations">
 								<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 							</button>
 						</div>
@@ -38,8 +38,6 @@
 							<ul class="site-navigation nav navbar-nav">
 								<li>
 									<a href="index.html">Accueil</a>
-								</li>
-								<li>
 								</li>
 								<li>
 									<a href="page2.html">Contact</a>
@@ -118,7 +116,6 @@
 			<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 			<!-- ScrollToTop Button END-->
 
-
 			<!-- Footer - bloc-8 -->
 			<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 				<div class="container bloc-sm">
@@ -130,22 +127,22 @@
 							<div class="row row-no-gutters social">
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+										<a class="social" href="index.html"><span class="fa fa-twitter icon-md" title="Notre compte Twitter"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+										<a class="social" href="index.html"><span class="fa fa-facebook icon-md" title="Notre compte Facebook"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+										<a class="social" href="index.html"><span class="fa fa-dribbble icon-md" title="Notre compte Dribble"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+										<a class="social" href="index.html"><span class="fa fa-instagram icon-md" title="Notre compte Instagram"></span></a>
 									</div>
 								</div>
 							</div>
