--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 								<div class="text-center">
 									<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg" aria-labelledby="Icône du point Web Design"></span>
 								</div>
-								<h3 class="mg-md text-center">
+								<h2 class="mg-md text-center">
 									Web design
-								</h3>
+								</h2>
 								<p class="text-center">
 									Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 								</p>
@@ -86,9 +86,9 @@
 								<div class="text-center">
 									<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg" aria-labelledby="Icône du point Stratégie"></span>
 								</div>
-								<h3 class="mg-md text-center">
+								<h2 class="mg-md text-center">
 									Stratégie
-								</h3>
+								</h2>
 								<p class="text-center">
 									Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin d'améliorer aux mieux votre design et votre référencement naturel.
 								</p>
@@ -97,9 +97,9 @@
 								<div class="text-center">
 									<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" aria-labelledby="Icône du point Illustrations"></span>
 								</div>
-								<h3 class="mg-md text-center">
+								<h2 class="mg-md text-center">
 									Illustrations
-								</h3>
+								</h2>
 								<p class="text-center">
 									Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
 								</p>
@@ -124,9 +124,9 @@
 					<div class="container bloc-lg">
 						<div class="row tight-width-whitespace black-background">
 							<div class="col-sm-12">
-								<h2 class="mg-md text-center tc-white">
-									Notre travail ? Aider les entreprises Lyonnaise à se développer, à attirer de nouveaux clients et à connaître le succès qu'elles mérites.<br>
-								</h2>
+								<p class="mg-md text-center tc-white">
+									<strong>Notre travail ? Aider les entreprises Lyonnaise à se développer, à attirer de nouveaux clients et à connaître le succès qu'elles mérites.</strong>
+								</p>
 								<p class="text-center white">
 									Collaborer avec des entrepreneurs créatifs et des entreprises locale est notre passion, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau, bien structurés et qui seront facilement trouvable sur les moteurs de recherche.
 								</p>
@@ -150,18 +150,18 @@
 						<div class="row tight-width-whitespace portfolio-row">
 							<div class="col-sm-6">
 								<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="Exemple de design pour le site d'un journal local avec lequel nous avons travaillé" class="img-responsive portfolio-thumb" /></a>
-								<h3 class="mg-md text-center">
+								<h2 class="mg-md text-center">
 									Refonte d'un site pour un journal local
-								</h3>
+								</h2>
 								<p class="text-center">
 									Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 								</p>
 							</div>
 							<div class="col-sm-6">
 								<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" alt="Exemple de design pour un site de photographes avec lesquels nous avons travaillé" class="img-responsive portfolio-thumb" /></a>
-								<h3 class="mg-md text-center">
+								<h2 class="mg-md text-center">
 									Création d'un site pour photographes
-								</h3>
+								</h2>
 								<p class="text-center">
 									Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
 								</p>
@@ -170,18 +170,18 @@
 						<div class="row tight-width-whitespace portfolio-row">
 							<div class="col-sm-6">
 								<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" alt="Exemple de design pour le site d'un' voyageur avec lequel nous avons travaillé" class="img-responsive portfolio-thumb" /></a>
-								<h3 class="mg-md text-center">
+								<h2 class="mg-md text-center">
 									Réalisation d'un site pour un voyageur
-								</h3>
+								</h2>
 								<p class="text-center">
 									Nous avons élaboré un site web et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
 								</p>
 							</div>
 							<div class="col-sm-6">
 								<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" alt="Exemple de design pour le site d'une agence de mariage avec laquelle nous avons travaillé" class="img-responsive portfolio-thumb" /></a>
-								<h3 class="mg-md text-center">
+								<h2 class="mg-md text-center">
 									Conception d'un site pour une agence de mariage
-								</h3>
+								</h2>
 								<p class="text-center">
 									Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
 								</p>
@@ -196,9 +196,9 @@
 					<div class="container bloc-lg">
 						<div class="row">
 							<div class="col-sm-12">
-								<h2 class="mg-md text-center tc-white">
-									Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
-								</h2>
+								<p class="mg-md text-center tc-white">
+									<strong>Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !</strong>
+								</p>
 								<div class="col-sm-12 text-center">
 									<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Nous Contacter</a>
 								</div>
