--- a/page2.html
+++ b/page2.html
@@ -129,7 +129,7 @@
 							<p class="text-center white">
 								Agence La Panthère - Agence de webdesign basée à Lyon.
 							</p>
-							<div class="row row-no-gutters social">
+							<div class="row row-no-gutters socials">
 								<div class="col-sm-3">
 									<div class="text-center">
 										<a class="social" href="index.html"><span class="fa fa-twitter icon-md" title="Notre compte Twitter"></span></a>
