--- a/page2.html
+++ b/page2.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 	<head>
 		<meta charset="utf-8">
 		<title>Nous contacter - La Panthère</title>
@@ -23,7 +23,7 @@
 	</head>
 	<body>
 		<!-- Principal conteneur -->
-		<div class="page-container">	
+		<div class="page-container">
 			<!-- bloc-0 -->
 			<header class="bloc bgc-white l-bloc " id="bloc-0">
 				<div class="container bloc-sm">
@@ -149,6 +149,17 @@
 									<div class="text-center">
 										<a class="social" href="index.html"><span class="fa fa-instagram icon-md" title="Notre compte Instagram"></span></a>
 									</div>
+								</div>
+							</div>
+							<div class="row footer-links">
+								<div class="col-sm-4">
+									Partenaires
+									<ul>
+										<li><a href="voiture.com">voiture.com</a></li>
+										<li><a href="pizza.com">pizza.com</a></li>
+										<li><a href="matoiture.com">matoiture.com</a></li>
+										<li><a href="immobilierseo.com">immobilierseo.com</a></li>
+									</ul>
 								</div>
 							</div>
 						</div>
