--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
 					</div>
 				</section>
 				<!-- bloc-2-services END -->
-
+				
 				<!-- bloc-3-what-i-do -->
-				<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
+				<section class="bloc d-bloc bloc-bg-texture texture-paper b-parallax bg-presentation tc-white bgc-atomic-tangerine" id="bloc-3-what-i-do">
 					<div class="container bloc-lg">
 						<div class="row tight-width-whitespace black-background">
 							<div class="col-sm-12">
@@ -130,9 +130,9 @@
 								<p class="text-center white">
 									Collaborer avec des entrepreneurs créatifs et des entreprises locale est notre passion, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau, bien structurés et qui seront facilement trouvable sur les moteurs de recherche.
 								</p>
-								<div class="col-sm-12 text-center">
-									<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Nous Contacter</a>
-								</div>
+							</div>
+							<div class="col-sm-12 text-center">
+								<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Nous Contacter</a>
 							</div>
 						</div>
 					</div>
